--- a/cvas/index.html
+++ b/cvas/index.html
@@ -32,11 +32,11 @@
     </div>
 
     <main class="sobreMi1">
-        <div class="conocimientos">
+        <div class="webDesign"><i class="fa-solid fa-display"> <span class="webDesignIconoTexto"> Web Design</span></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
         </div>
-        <div class="experiencia">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eum ducimus nulla voluptatibus tempore? Modi cum ipsam fugiat iusto numquam unde animi, assumenda est eveniet et tempora incidunt error asperiores?</p>
+        <div class="experiencia"><i class="fa-regular fa-folder-open"> <span class="experienciaIconoTexto"> Experiencia</span></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
         </div>
     </main>
 
@@ -78,11 +78,17 @@
     -->
     <footer class="footer">
 
-        <div>
-            <h3>
-                Redes Sociales
-            </h3>
-            <a> <i class="fa-solid fa-pen-to-square" href="www.instagram.com"></i> </a>
+        <div class="logoInstagram"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram </span></i>
+            <p>  </p>
+        </div>
+        <div class="logoGithub"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i>
+            <p>  </p>
+        </div>
+        <div class="logoLinkedin"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i>
+            <p>  </p>
+        </div>
+        <div class="logoTwitter"><i class="fa-brands fa-twitter"> <span class="experienciaIconoTexto"> Twitter</span></i>
+            <p>  </p>
         </div>
 
 
