--- a/cvas/index.html
+++ b/cvas/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style2.css">
+    <script type="text/javascript" src="script.js"></script>
     <script src="https://kit.fontawesome.com/b62f7dd1b1.js" crossorigin="anonymous"></script>
 
     <title>Genesis Prescott</title>
@@ -12,13 +13,22 @@
 </head>
 <body>
     
-<div class="navbar">
-    <a class="home"><i class="fa-solid fa-house"></i> Inicio </a>
-    <a href="#"><i class="fa-solid fa-folder-open"></i> Portfolio </a>
-    <a href="#"><i class="fa-solid fa-user"></i> Sobre Mi </a>
-    <a href="#"><i class="fa-solid fa-envelope"></i> Contacto </a>
+<div class="navbar" id="Topnav">
+    <a  href="#"><i class="fa-solid fa-house" id="inicio1"></i>Inicio</a>
+    <a  href="#"><i class="fa-solid fa-folder-open" id="portrfolio1"></i>Portfolio</a>
+    <a  href="#"><i class="fa-solid fa-user" id="sobreMi1"></i>SobreMi</a>
+    <a  href="#"><i class="fa-solid fa-envelope" id="contacto1"></i>Contacto</a>
 </div>
 
+<div class="menuChico">
+    <button onclick="myFunction()" class="botonMenuChico"><i class="fa-solid fa-bars"></i></button>
+  <div id="menuColapsable" class="colapsableContenido">
+  <a href="#"> Inicio </a>
+  <a href="#"> Sobre mi </a>
+  <a href="#"> Portfolio </a>
+  <a href="#"> contacto </a>
+  </div>
+  </div>
 
     <div class="container">
         <div class="fotoPerfil">
@@ -32,7 +42,7 @@
     </div>
 
     <main class="sobreMi1">
-        <div class="webDesign"><i class="fa-solid fa-display"> <span class="webDesignIconoTexto"> Web Design</span></i>
+        <div class="webDesign"><i class="fa-solid fa-display"> <span class="webDesignIconoTexto"> WebDesign</span></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
         </div>
         <div class="experiencia"><i class="fa-regular fa-folder-open"> <span class="experienciaIconoTexto"> Experiencia</span></i>
@@ -40,59 +50,18 @@
         </div>
     </main>
 
-
-
-
-
-
-    <!--
-    <div class="navbar">
-            <a href="#" class="right"> Link </a>
-            <a href="#" class="right"> Conocimientos </a>
-            <a href="#" class="right"> Portfolio </a>
-            <a href="#" class="left"> Contacto </a>
-    </div>
--->
-<!--
-    <main>
-        <div class="seccion">
-            <div class="conocimientos">
-                <i class="fa-solid fa-book"></i>
-                 <h3> Conocimientos </h3>
-                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Blanditiis, nam sequi itaque debitis repellat quaerat sapiente
-                repudiandae in sunt iure laudantium vitae ex, ratione praesentium maxime.
-                Autem, qui? Impedit, magnam. </p>
-            </div>
-            <div class="something">
-                <i class="fa-solid fa-pen-to-square"></i>
-                <h3> Algo </h3>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Nesciunt ad ipsa aut atque impedit reiciendis unde ex dolor sint esse? 
-                Odit molestiae blanditiis incidunt, ipsa excepturi dolores officia iste veritatis. 
-                </p>
-            </div>
-        </div>
-    </main>
-
-    -->
     <footer class="footer">
 
-        <div class="logoInstagram"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram </span></i>
-            <p>  </p>
+        <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram</span></i></a>
         </div>
-        <div class="logoGithub"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i>
-            <p>  </p>
+        <div class="logoGithub"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i></a>
         </div>
-        <div class="logoLinkedin"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i>
-            <p>  </p>
+        <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i></a>
         </div>
-        <div class="logoTwitter"><i class="fa-brands fa-twitter"> <span class="experienciaIconoTexto"> Twitter</span></i>
-            <p>  </p>
+        <div class="logoTwitter"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-twitter"><span class="experienciaIconoTexto"> Twitter</span></i></a>
         </div>
-
-
-
     </footer>
+
+    <script src="javascript.js"></script>
 </body>
 </html>
