limpieza general para reentrega de proyecto

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     
 <div class="navbar" id="Topnav">
     <a  href="#"><i class="fa-solid fa-house" id="inicio1"></i>Inicio</a>
-    <a  href="#"><i class="fa-solid fa-folder-open" id="portrfolio1"></i>Portfolio</a>
-    <a  href="#"><i class="fa-solid fa-user" id="sobreMi1"></i>SobreMi</a>
-    <a  href="#"><i class="fa-solid fa-envelope" id="contacto1"></i>Contacto</a>
+    <a  href="./portfolio.html"><i class="fa-solid fa-folder-open" id="portrfolio1"></i>Portfolio</a>
+    <a  href="#sobreMi"><i class="fa-solid fa-user" id="sobreMi1"></i>SobreMi</a>
+    <a  href="./contacto.html"><i class="fa-solid fa-envelope" id="contacto1"></i>Contacto</a>
 </div>
 
 <div class="menuChico">
     <button onclick="myFunction()" class="botonMenuChico"><i class="fa-solid fa-bars"></i></button>
   <div id="menuColapsable" class="colapsableContenido">
   <a href="#"> Inicio </a>
-  <a href="#"> Sobre mi </a>
-  <a href="#"> Portfolio </a>
-  <a href="#"> contacto </a>
+  <a href="#sobreMi"> Sobre mi </a>
+  <a href="./portfolio.html"> Portfolio </a>
+  <a href="./contacto.html"> contacto </a>
   </div>
-  </div>
+</div>
 
     <div class="container">
         <div class="fotoPerfil">
@@ -37,16 +37,26 @@
         <div class="textoDescripcion">
             <h1> Genesis Prescott </h1>
             <h2> Frontend Developer </h2>
-            <h4> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste quasi exercitationem facilis, mollitia maxime fugiat magni atque excepturi dolore ea pariatur veritatis obcaecati, a natus. Necessitatibus assumenda quam temporibus ab. </h4>
+            <h4> Desarrolladora web especializada en frontend. Basada en Buenos Aires, Argentina. </h4>
         </div>
     </div>
 
-    <main class="sobreMi1">
+    <main id="sobreMi" class="sobreMi1">
+
         <div class="webDesign"><i class="fa-solid fa-display"> <span class="webDesignIconoTexto"> WebDesign</span></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
         </div>
+
         <div class="experiencia"><i class="fa-regular fa-folder-open"> <span class="experienciaIconoTexto"> Experiencia</span></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
+        </div>
+
+        <div class="informacionPersonal"><i class="fa-regular fa-user"> <span class="informacionPersonalIconoTexto"> Información Personal</span> </i>
+            <p><span class="bold">Nombre Completo:</span> Genesis Prescott</p>
+            <p><span class="bold">Fecha de Nacimiento:</span> 7/6/1993</p>
+            <p><span class="bold">Dirección:</span> 6922 Stevens Creek Blvd, Buenos Aires, Argentina</p>
+            <p><span class="bold">email:</span> genesisprescott@example.com</p>
+            <p><span class="bold">Teléfono:</span> (952) 712-6942</p>
         </div>
     </main>
 
