revision para reentrega proyecto final

--- a/index.html
+++ b/index.html
@@ -43,12 +43,26 @@
 
     <main id="sobreMi" class="sobreMi1">
 
-        <div class="webDesign"><i class="fa-solid fa-display"> <span class="webDesignIconoTexto"> WebDesign</span></i>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
+        <div class="habilidades"><i class="fa-solid fa-display"> <span class="habilidadesIconoTexto"> Habilidades</span></i>
+            <p>HTML</p>
+            <div class="barraHabilidades">
+                <div class="habilidad html"> 90% </div>
+            </div>
+            <p>CSS</p>
+            <div class="barraHabilidades">
+                <div class="habilidad css"> 90% </div>
+            </div>
+            <p>JavaScript</p>
+            <div class="barraHabilidades">
+                <div class="habilidad js"> 70% </div>
+            </div>
         </div>
 
         <div class="experiencia"><i class="fa-regular fa-folder-open"> <span class="experienciaIconoTexto"> Experiencia</span></i>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio quibusdam provident neque necessitatibus, fuga architecto similique expedita ad asperiores a ipsam nam aut. Totam obcaecati id consectetur expedita voluptas.</p>
+            <p> Desarrollo de aplicaciones web </p>
+            <p> Maquetacion HTML5, CSS3, Bootstrap </p>
+            <p> Mantenimiento de aplicaciones web </p>
+            <p> Manejo de datos XML, JSON </p>
         </div>
 
         <div class="informacionPersonal"><i class="fa-regular fa-user"> <span class="informacionPersonalIconoTexto"> Información Personal</span> </i>
@@ -62,11 +76,11 @@
 
     <footer class="footer">
 
-        <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram</span></i></a>
+        <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="habilidadesIconoTexto"> Instagram</span></i></a>
         </div>
         <div class="logoGithub"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i></a>
         </div>
-        <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i></a>
+        <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="habilidadesIconoTexto"> LinkedIn</span></i></a>
         </div>
         <div class="logoTwitter"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-twitter"><span class="experienciaIconoTexto"> Twitter</span></i></a>
         </div>
