--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,11 @@
 </div>
 
 <footer class="footer2">
-    <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram</span></i></a>
+    <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="habilidadesIconoTexto"> Instagram</span></i></a>
     </div>
     <div class="logoGithub"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i></a>
     </div>
-    <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i></a>
+    <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="habilidadesIconoTexto"> LinkedIn</span></i></a>
     </div>
     <div class="logoTwitter"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-twitter"><span class="experienciaIconoTexto"> Twitter</span></i></a>
     </div>
