--- a/contacto.html
+++ b/contacto.html
@@ -31,32 +31,29 @@
       </div>
     </div>
 
-    <div class="formulario">
-        <h2>Formulario de Contacto</h2>
-        <form action="#">
-            <label for="nombre">Nombre:</label><br>
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre"><br>
-            <label for="apellido"> Apellido: </label><br>
-            <input type="text" id="apellido" name="apellido" placeholder="Apellido"><br>
-            <label for="email"> Email: </label><br>
-            <input type="email" id="email" name="email" placeholder="Email"><br>
-            <label for="consulta">Consulta</label><br>
-    <textarea id="consulta" name="consulta" placeholder="Escribe algo..." style="height:100px"></textarea><br>
-            <input type="submit" value="submit">
-        </form>
-    </div>
-
-
-
-
-
+    <div class="containerFormulario">
+        <div class="formulario">
+         <h2>Formulario de Contacto</h2>
+         <form action="#">
+             <label for="nombre">Nombre:</label><br>
+               <input type="text" id="nombre" name="nombre" placeholder="Nombre"><br>
+               <label for="apellido"> Apellido: </label><br>
+               <input type="text" id="apellido" name="apellido" placeholder="Apellido"><br>
+               <label for="email"> Email: </label><br>
+               <input type="email" id="email" name="email" placeholder="Email"><br>
+              <label for="consulta">Consulta</label><br>
+       <textarea id="consulta" name="consulta" placeholder="Escribe algo..." style="height:100px"></textarea><br>
+                <input type="submit" value="submit">
+          </form>
+     </div>
+</div>
 
     <footer class="footer2">
-        <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="webDesignIconoTexto"> Instagram</span></i></a>
+        <div class="logoInstagram"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="habilidadesIconoTexto"> Instagram</span></i></a>
         </div>
         <div class="logoGithub"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-github"> <span class="experienciaIconoTexto"> Github</span></i></a>
         </div>
-        <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="webDesignIconoTexto"> LinkedIn</span></i></a>
+        <div class="logoLinkedin"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-linkedin-in"> <span class="habilidadesIconoTexto"> LinkedIn</span></i></a>
         </div>
         <div class="logoTwitter"><a href="http://example.com/" target="_blank"><i class="fa-brands fa-twitter"><span class="experienciaIconoTexto"> Twitter</span></i></a>
         </div>
